<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kiparys</string>
    <string name="sign_in_tab">Вход</string>
    <string name="sign_up_tab">Регистрация</string>
    <string name="page_title_account_section">Аккаунт</string>
    <string name="page_title_privacy_policy">Политика конфиденциальности</string>
    <string name="page_title_personal_info_section">Персональная информация</string>
    <string name="page_title_security_section">Безопасность</string>
    <string name="page_text_privacy_policy">
        \t\t\tМы уважаем вашу конфиденциальность и обязуемся защищать ваши персональные данные. Настоящая политика конфиденциальности объясняет, как мы собираем, используем, храним и передаем вашу информацию при использовании приложения Kiparys. Прежде чем продолжить использование нашего приложения, ознакомьтесь с данной политикой, чтобы понять, как обрабатываются ваши данные.

        \n\n\t\t\t**1. Сбор данных**:
        \n\t\t\tМы можем собирать следующие типы данных:
        \n\t\t\t- Персональная информация: имя, адрес электронной почты, номер телефона, дата рождения и другая информация, предоставляемая вами при регистрации или использовании приложения.
        \n\t\t\t- Данные об устройстве: информация о вашем устройстве, включая модель, операционную систему, уникальные идентификаторы устройства, IP-адрес и данные о сети.
        \n\t\t\t- Логи активности: данные о ваших действиях в приложении, включая входы, выходы, действия в аккаунте и взаимодействие с функциональностью приложения.
        \n\t\t\t- Локационные данные: данные о вашем местоположении, если вы предоставляете доступ к ним через настройки вашего устройства.
        \n\t\t\t- Куки-файлы и подобные технологии: мы можем использовать их для сбора информации о вашем использовании приложения для улучшения пользовательского опыта.

        \n\n\t\t\t**2. Использование данных**:
        \n\t\t\tСобранные данные могут использоваться для следующих целей:
        \n\t\t\t- Обеспечение работы приложения: обработка ваших запросов, предоставление доступа к функциям приложения и поддержка работы сервисов.
        \n\t\t\t- Улучшение приложения: анализ использования, исправление ошибок и разработка новых функций, основанных на вашем опыте использования.
        \n\t\t\t- Коммуникация: отправка уведомлений, связанных с вашим аккаунтом, и связи с вами по вопросам поддержки, обновлений, изменений в работе приложения и предоставления новостей.
        \n\t\t\t- Безопасность: защита вашего аккаунта и предотвращение мошенничества, несанкционированного доступа и других угроз безопасности.
        \n\t\t\t- Юридические обязательства: выполнение требований законодательства, в том числе хранение и передача данных в случаях, предусмотренных законом.

        \n\n\t\t\t**3. Хранение данных**:
        \n\t\t\tМы храним ваши персональные данные только в течение времени, необходимого для выполнения целей, для которых они были собраны, или в соответствии с требованиями законодательства. Ваши данные могут быть удалены или анонимизированы по вашему запросу или в случае, если они больше не нужны для указанных целей.

        \n\n\t\t\t**4. Передача данных**:
        \n\t\t\tМы не передаем ваши персональные данные третьим лицам без вашего явного согласия, за исключением следующих случаев:
        \n\t\t\t- Если это необходимо для выполнения наших обязательств перед вами (например, при использовании сторонних поставщиков услуг, которые помогают нам предоставлять вам функционал приложения).
        \n\t\t\t- Для выполнения юридических обязательств, в ответ на судебные иски или для защиты прав компании и пользователей.
        \n\t\t\t- При продаже, слиянии или реорганизации нашей компании данные могут быть переданы новым владельцам, с соответствующими обязательствами по защите вашей конфиденциальности.

        \n\n\t\t\t**5. Безопасность данных**:
        \n\t\t\tМы принимаем все разумные меры для обеспечения безопасности ваших данных и защиты их от несанкционированного доступа, изменения, раскрытия или уничтожения. Это включает использование современных методов шифрования, защитных технологий и протоколов доступа. Однако полную безопасность данных в интернете гарантировать невозможно, поэтому мы не можем полностью исключить риски.

        \n\n\t\t\t**6. Ваши права**:
        \n\t\t\tВы имеете право:
        \n\t\t\t- Запрашивать доступ к своим персональным данным, которые мы храним.
        \n\t\t\t- Исправлять или обновлять свои данные, если они оказались неточными или неполными.
        \n\t\t\t- Удалять свои данные по запросу, если это не противоречит законодательным обязательствам.
        \n\t\t\t- Ограничивать обработку ваших данных в определенных ситуациях.
        \n\t\t\t- Возражать против использования ваших данных для маркетинговых или иных целей, не связанных с основной работой приложения.

        \n\n\t\t\t**7. Обновления политики конфиденциальности**:
        \n\t\t\tМы можем периодически обновлять настоящую политику конфиденциальности в соответствии с изменениями законодательства или работы приложения. Мы будем уведомлять вас о любых существенных изменениях путем публикации обновленной версии политики в приложении. Мы рекомендуем периодически проверять политику конфиденциальности, чтобы оставаться в курсе изменений.
    </string>
    <string name="navigation_profile_bottom_sheet">Профиль</string>
    <string name="navigation_projects">Проекты</string>
    <string name="navigation_tasks">Задачи</string>
    <string name="navigation_assistant">Ассистент</string>
    <string name="navigation_meetings">Встречи</string>
    <string name="content_description_app_icon">Иконка приложения</string>
    <string name="content_description_user_profile_image">Изображение профиля пользователя</string>
    <string name="content_description_copy_email">Копировать адрес электронной почты</string>
    <string name="content_description_scroll">Содержимое экрана прокручивается</string>
    <string name="content_description_search_bar">Поле для поиска проектов</string>
    <string name="content_description_search_results">Результаты поиска</string>
    <string name="content_description_navigation">Навигация по экрану</string>
    <string name="content_description_email_icon">Иконка почты</string>
    <string name="content_description_edit_profile_image">Редактировать фото</string>
    <string name="content_description_birthdate_icon">Иконка даты рождения</string>
    <string name="content_description_full_name_icon">Иконка имени</string>
    <string name="content_description_about_icon">Иконка о себе</string>
    <string name="content_description_profile_icon">Иконка профиля</string>
    <string name="content_description_settings_icon">Иконка настроек</string>
    <string name="content_description_exit_icon">Иконка выхода</string>
    <string name="content_description_two_factor_icon">Иконка двухфакторной аутентификации</string>
    <string name="content_description_app_theme_icon">Иконка темы приложения</string>
    <string name="content_description_notification_icon">Иконка уведомлений</string>
    <string name="content_description_privacy_policy_icon">Иконка политики конфиденциальности</string>
    <string name="content_description_about_app_icon">Иконка о приложении</string>
    <string name="content_description_delete_icon">Иконка удаления</string>
    <string name="content_description_gallery_icon">Иконка галереи</string>
    <string name="content_description_photo_icon">Иконка фото</string>
    <string name="label_photo">Сделать фото</string>
    <string name="label_gallery">Выбрать из галереи</string>
    <string name="label_delete">Удалить</string>
    <string name="label_two_factor">Двухфакторная аутентификация</string>
    <string name="label_full_name">Ваше имя</string>
    <string name="label_birthdate">Дата рождения</string>
    <string name="label_about">О себе</string>
    <string name="label_username">Имя</string>
    <string name="label_email">Адрес почты</string>
    <string name="label_password">Пароль</string>
    <string name="label_profile">Мой профиль</string>
    <string name="label_settings">Настройки</string>
    <string name="label_exit">Выйти</string>
    <string name="label_push_notification">Push-уведомления</string>
    <string name="label_app_theme">Тема оформления</string>
    <string name="label_privacy_policy">Политика конфиденциальности</string>
    <string name="label_about_app">О приложении</string>
    <string name="label_app_version">Версия %1$s</string>
    <string name="label_build_version">Сборка %1$s</string>
    <string name="label_developer_info">© %1$s fomchv</string>
    <string name="info_nickname">nickname</string>
    <string name="info_email">user@example.com</string>
    <string name="info_full_name">Firstname Lastname</string>
    <string name="info_about">Напишите что-нибудь о себе…</string>
    <string name="info_password">************</string>
    <string name="info_birthdate">Укажите дату рождения</string>
    <string name="info_email_verified">Адрес подтверждён</string>
    <string name="info_email_not_verified">Адрес не подтверждён</string>
    <string name="info_two_factor_enabled">Подключена</string>
    <string name="info_two_factor_disabled">Не подключена</string>
    <string name="info_push_notification">Включить уведомления</string>
    <string name="info_app_theme_system">Как в системе</string>
    <string name="info_app_theme_dark">Тёмная</string>
    <string name="info_app_theme_light">Светлая</string>
    <string name="info_privacy_policy">Условия обработки данных</string>
    <string name="info_about_app">Информация о версии и разработчике</string>
    <string name="date_picker_title_birthdate">Выберите дату</string>
    <string name="dialog_title_sign_out">Подтвердите выход</string>
    <string name="dialog_title_password_reset">Сбросить пароль</string>
    <string name="dialog_title_new_password">Установить новый пароль</string>
    <string name="dialog_title_disable_notifications">Отключить уведомления?</string>
    <string name="dialog_title_verification_email_sent">Письмо для верификации отправлено</string>
    <string name="dialog_title_profile_image_delete">Удаление изображения профиля</string>
    <string name="dialog_title_profile_image_preview">Предварительный просмотр </string>
    <string name="dialog_title_email_update_success">Адрес электронной почты обновлён</string>
    <string name="dialog_message_email_update_success">Сейчас вы выйдете из системы, и вам необходимо будет авторизоваться повторно с обновлёнными данными</string>
    <string name="dialog_message_profile_image_delete">Вы уверены, что хотите удалить изображение профиля?</string>
    <string name="dialog_message_disable_notifications">Вы не сможете получать уведомления о новых сообщениях, задачах и обновлениях в проектах</string>
    <string name="dialog_message_password_reset">Отправим ссылку на почту</string>
    <string name="dialog_message_sign_out">Вы уверены, что хотите выйти из приложения?</string>
    <string name="dialog_message_verification_register_email_sent">Чтобы завершить регистрацию, перейдите по ссылке, отправленной на почту %1$s</string>
    <string name="dialog_message_verification_update_email_sent">Чтобы завершить обновление, перейдите по ссылке, отправленной на почту %1$s</string>
    <string name="dialog_title_email_recovery_success">Смена электронной почты отменена</string>
    <string name="chip_projects">Проекты</string>
    <string name="chip_tasks">Задачи</string>
    <string name="chip_ideas">Идеи</string>
    <string name="chip_messages">Сообщения</string>
    <string name="chip_users">Пользователи</string>
    <string name="chip_meetings">Встречи</string>
    <string name="label_email_example">user@example.com</string>
    <string name="content_description_selected_icon">Выбранный элемент списка</string>
</resources>