<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivUserIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/content_description_user_profile_image"
        android:src="@drawable/baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sivCheckMark"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="?attr/colorSurface"
        android:contentDescription="@string/content_description_selected_icon"
        android:src="@drawable/baseline_check_circle_outline_24"
        android:tint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/sivUserIcon"
        app:layout_constraintEnd_toEndOf="@id/sivUserIcon"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.NavigationView.Item" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_username"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sivUserIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvUserEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_email_example"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/mtvUserName"
        app:layout_constraintTop_toBottomOf="@id/mtvUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>
