<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottomSheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/dragHandle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sivProfileImage"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:contentDescription="@string/content_description_user_profile_image"
                android:src="@drawable/baseline_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dragHandle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvUserFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/info_full_name"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sivProfileImage"
                app:layout_constraintWidth_percent="0.85" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/info_email"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mtvUserFullName"
                app:layout_constraintWidth_max="320dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCopyEmail"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_copy_email"
                app:icon="@drawable/outline_content_copy_24"
                app:layout_constraintBottom_toBottomOf="@+id/mtvUserEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/mtvUserEmail"
                app:layout_constraintTop_toTopOf="@+id/mtvUserEmail"
                app:layout_constraintVertical_bias="0.5" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/dividerVertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtvUserEmail" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clProfileOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toBottomOf="@+id/viewDivider">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivProfileIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_profile_icon"
                    android:src="@drawable/outline_account_circle_24"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvProfileText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvProfileText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvProfileText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_profile"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textDirection="locale"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sivProfileIcon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSettingsOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toBottomOf="@+id/clProfileOption">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivSettingsIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_settings_icon"
                    android:src="@drawable/outline_settings_24"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvSettingsText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvSettingsText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvSettingsText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_settings"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textDirection="locale"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sivSettingsIcon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clExitOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clSettingsOption">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivExitIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_exit_icon"
                    android:src="@drawable/outline_logout_24"
                    app:layout_constraintBottom_toBottomOf="@+id/mtvExitText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mtvExitText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvExitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_exit"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textDirection="locale"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sivExitIcon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
